Release plugin 0.4.0.0 with fresh analysis 1.2 composition
